# rust-yew-signup-signin

./: Cargo.toml  Makefile  README.md  index.html  tailwind.config.js
src/: app.rs  main.rs  router.rs  store.rs
src/api/: mod.rs  types.rs  user_api.rs
src/components/: alert.rs  form_input.rs  header.rs  loading_button.rs  mod.rs  spinner.rs
src/pages/: home_page.rs  login_page.rs  mod.rs  profile_page.rs  register_page.rs
